--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 <body>
 <div class="container">
   <img class="logo" src="images/logo.svg" alt="">
-  <img class="mockup" src="images/illustration-mockups.svg" alt="">
-  <div class="contenant">
-    <h1>Build The Community Your Fans Will Love</h1>
-    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-    Create connections with your users as you engage in genuine discussion.</p>
-    <a class="register" href="#">Register</a>
+  <div class="flex-box">
+    <img class="mockup" src="images/illustration-mockups.svg" alt="">
+    <div class="contenant">
+      <h1>Build The Community Your Fans Will Love</h1>
+      <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+      Create connections with your users as you engage in genuine discussion.</p>
+      <a class="register" href="#">Register</a>
+    </div>
   </div>
+
   <div class="social">
   <img class="img-soc" src="images/FB.svg" alt="">
   <img class="img-soc" src="images/TW.svg" alt="">
